@@ -18,16 +18,25 @@
   <parent>
     <groupId>com.graphaware.neo4j</groupId>
     <artifactId>module-parent</artifactId>
-    <version>3.5.2.53</version>
+    <version>3.5.4.53</version>
   </parent>
 
   <artifactId>nlp</artifactId>
-  <version>3.5.2.53.17-SNAPSHOT</version>
+  <version>3.5.4.53.18-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Natural Language Processing with Neo4j</name>
   <description>GraphAware Framework Module for adding NLP capabilities to Neo4j.</description>
   <url>https://graphaware.com</url>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <resttest.version>${project.parent.version}.19</resttest.version>
+    <jackson.version>2.7.8</jackson.version>
+    <tika.version>1.19.1</tika.version>
+  </properties>
 
   <licenses>
     <license>
@@ -84,14 +93,6 @@
     <url>https://graphaware.com</url>
   </organization>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <jackson.version>2.7.8</jackson.version>
-    <tika.version>1.19.1</tika.version>
-  </properties>
-  
   <dependencies>
 
     <!-- needed for excluding asm version compiled on jdk 1.9, will be moved to framework later -->
@@ -122,6 +123,39 @@
       <groupId>com.graphaware.neo4j</groupId>
       <artifactId>runtime-api</artifactId>
       <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j</artifactId>
+      <version>${neo4j.version}</version>
+      <scope>provided</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.ow2.asm</groupId>
+          <artifactId>asm-analysis</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.ow2.asm</groupId>
+          <artifactId>asm-util</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.ow2.asm</groupId>
+          <artifactId>asm-tree</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.ow2.asm</groupId>
+          <artifactId>asm</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>javax.xml.bind</groupId>
+          <artifactId>jaxb-api</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.sun.xml.bind</groupId>
+          <artifactId>jaxb-impl</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
@@ -227,6 +261,10 @@
         </exclusion>
         <exclusion>
           <groupId>org.ow2.asm</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.jsoup</groupId>
           <artifactId>*</artifactId>
         </exclusion>
       </exclusions>
@@ -384,7 +422,7 @@
       </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.5.1</version>
+        <version>3.8.0</version>
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
@@ -430,9 +468,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.19.1</version>
+        <version>2.22.1</version>
         <configuration>
-          <argLine>-Xmx2048m -XX:MaxPermSize=512m</argLine>
+          <argLine>-Xmx6g</argLine>
+          <reuseForks>false</reuseForks> <!-- This will make sure to spawn a fresh jvm for each test -->
         </configuration>
       </plugin>
     </plugins>
